--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
   </header>
 
   <!-- The Band -->
-  <section class="bg-light" id="the-band">
+  <section id="the-band">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">The Band</h2>
-          <h3 class="section-subheading text-muted">Groovin' since '66</h3>
+          <h3 class="section-subheading text-muted">GROOVIN' SINCE '66</h3>
         </div>
       </div>
       <div class="row">
@@ -143,50 +143,54 @@
   </section>
 
   <!-- Gigs -->
-  <section id="live">
+  <section class="bg-light" id="live">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">LIVE</h2>
-          <h3 class="section-subheading text-muted">See The Monkees perform on stage</h3>
+          <h3 class="section-subheading text-muted">SEE THE MONKEES PERFORM LIVE ON STAGE</h3>
         </div>
       </div>
       <div class="row text-center">
         <div class="col-md-3">
-          <img class="rounded-circle img-fluid gig-image" src="img/locations/seattle.jpg" alt="">
-          <h4 class="service-heading">Seattle, WA</h4>
-          <p class="text-muted">Neptune Theatre</p>
+          <img class="rounded-circle img-fluid gig-image" src="img/locations/seattle.jpg">
+          <h4 class="service-heading">SEATTLE, WA</h4>
+          <p class="text-muted">NEPTUNE THEATRE</p>
           <p class="text-muted">17-01-2019</p>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://www.stgpresents.org/calendar" target="_blank">Book Tickets</a>
         </div>
         <div class="col-md-3">
           <img class="rounded-circle img-fluid gig-image" src="img/locations/sacramento.jpg" alt="">
-          <h4 class="service-heading">Sacramento, CA</h4>
-          <p class="text-muted">The Sofia</p>
+          <h4 class="service-heading">SACRAMENTO, CA</h4>
+          <p class="text-muted">THE SOFIA</p>
           <p class="text-muted">20-01-2019</p>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://bstreettheatre.org/show/sbl-entertainment-presents-michael-nesmith/" target="_blank">Book Tickets</a>
         </div>
         <div class="col-md-3">
           <img class="rounded-circle img-fluid gig-image" src="img/locations/west-hollywood.jpg" alt="">
-          <h4 class="service-heading">West Hollywood, CA</h4>
-          <p class="text-muted">Troubadour</p>
+          <h4 class="service-heading">HOLLYWOOD, CA</h4>
+          <p class="text-muted">TROUBADOUR</p>
           <p class="text-muted">17-01-2019</p>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://www.troubadour.com/event/1792110-michael-nesmith-hits-just-los-angeles/" target="_blank">Book Tickets</a>
         </div>
         <div class="col-md-3">
           <img class="rounded-circle img-fluid gig-image" src="img/locations/new-york.jpg" alt="">
-          <h4 class="service-heading">New York, NY</h4>
-          <p class="text-muted">The Beacon Theatre</p>
+          <h4 class="service-heading">NEW YORK, NY</h4>
+          <p class="text-muted">THE BEACON THEATRE</p>
           <p class="text-muted">09-03-2019</p>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://www1.ticketmaster.com/event/3B00544BEAD4326A" target="_blank">Book Tickets</a>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Audio -->
-  <section class="bg-light" id="audio">
+  <section id="audio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Listen</h2>
-          <h3 class="section-subheading text-muted">Play some of The Monkees hits</h3>
+          <h3 class="section-subheading text-muted">PLAY SOME OF THE HITS</h3>
         </div>
       </div>
       <div class="row">
@@ -231,17 +235,17 @@
   </section>
 
   <!-- Video -->
-  <section id="video">
+  <section class="bg-light" id="video">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Watch</h2>
-          <h3 class="section-subheading text-muted">Relive the music</h3>
+          <h3 class="section-subheading text-muted">RELIVE THE MUSIC</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-12">
-          <video controls class="music-video" width="320" height="240">
+          <video controls class="music-video">
             <source src="media/video/TheMonkees.mp4" type="video/mp4">
           </video>
         </div>
@@ -250,42 +254,40 @@
   </section>
 
   <!-- Book -->
-  <section class="bg-light" id="book">
+  <section id="book">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Book</h2>
-          <h3 class="section-subheading text-muted">Get The Monkees to perform at events such as weddings and Christmas parties</h3>
+          <h3 class="section-subheading text-muted">GET THE MONKEES TO PERFORM AT <strong>YOUR</strong> EVENT</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <form id="contactForm" name="sentMessage" novalidate="novalidate">
+          <form id="contactForm">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-sm-12">
                 <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
+                  <input class="form-control" id="name" type="text" placeholder="Full Name..." required="required" data-validation-required-message="Please enter your name.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
+                  <input class="form-control" id="email" type="email" placeholder="Email..." required="required" data-validation-required-message="Please enter your email address.">
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
+                  <input class="form-control" id="phone" type="tel" placeholder="Phone..." required="required" data-validation-required-message="Please enter your phone number.">
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-sm-12">
                 <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
+                  <textarea class="form-control" id="message" placeholder="Type details of your request here..." required="required" data-validation-required-message="Please enter a message."></textarea>
                 </div>
               </div>
               <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+              <div class="col-sm-12 text-center">
+                <a data-toggle="modal" href="#messageModal">
+                  <button class="btn btn-primary btn-xl text-uppercase" type="submit">Send Request</button>
+                </a>
               </div>
             </div>
           </form>
@@ -298,26 +300,29 @@
   <footer>
     <div class="container">
       <div class="row justify-content-center">
+        <h2 class="footer-brand">The Monkees</h2>
+      </div>
+      <div class="row justify-content-center">
         <ul class="list-inline social-buttons">
           <li class="list-inline-item">
-            <a href="https://twitter.com/themonkees">
-                <i class="fab fa-twitter fa-2x"></i>
+            <a href="https://www.youtube.com/channel/UCv1oY0OLtsEySHeP1TkYNqA" target="_blank">
+                <i class="fab fa-youtube fa-2x"></i>
               </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://www.facebook.com/TheMonkees">
+            <a href="https://www.facebook.com/TheMonkees" target="_blank">
                 <i class="fab fa-facebook-f fa-2x"></i>
               </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://www.instagram.com/themonkees">
-                <i class="fab fa-linkedin-in fa-2x"></i>
+            <a href="https://www.twitter.com/themonkees" target="_blank">
+                <i class="fab fa-twitter fa-2x"></i>
               </a>
           </li>
         </ul>
       </div>
       <div class="row justify-content-center">
-        <span class="copyright">Copyright &copy; George Fairbairn 2019</span>
+        <span class="copyright">COPYRIGHT &copy; GEORGE FAIRBAIRN 2019</span>
       </div>
     </div>
   </footer>
@@ -337,8 +342,8 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <h4 class="text-uppercase">Daydream Believer</h4>
-                <p class="text-muted">The Monkees</p>
+                <h4 class="song-title">DAYDREAM BELIEVER</h4>
+                <p class="text-muted">THE MONKEES</p>
                 <audio controls="controls">
                     <source src="media/audio/DaydreamBeliever.mp3" type="audio/mpeg">
                 </audio>
@@ -363,8 +368,8 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <h4 class="text-uppercase">I&lsquo;m A Believer</h4>
-                <p class="text-muted">The Monkees</p>
+                <h4 class="song-title">I&lsquo;M A BELIEVER</h4>
+                <p class="text-muted">THE MONKEES</p>
                 <audio controls="controls">
                     <source src="media/audio/ImABeliever.mp3" type="audio/mpeg">
                 </audio>
@@ -389,8 +394,8 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <h4 class="text-uppercase">Clarksville</h4>
-                <p class="text-muted">The Monkees</p>
+                <h4 class="song-title">CLARKSVILLE</h4>
+                <p class="text-muted">THE MONKEES</p>
                 <audio controls="controls">
                     <source src="media/audio/Clarksville.mp3" type="audio/mpeg">
                 </audio>
@@ -415,11 +420,34 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
-                <h4 class="text-uppercase">Stepping Stone</h4>
-                <p class="text-muted">The Monkees</p>
+                <h4 class="song-title">STEPPING STONE</h4>
+                <p class="text-muted">THE MONKEES</p>
                 <audio controls="controls">
                     <source src="media/audio/SteppingStone.mp3" type="audio/mpeg">
                 </audio>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Message Modal -->
+  <div class="portfolio-modal modal fade" id="messageModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+                <h4 class="song-title">MESSAGE RECEIVED!</h4>
+                <p class="text-muted">ONE OF THE TEAM WILL BE IN TOUCH</p>
               </div>
             </div>
           </div>
@@ -437,10 +465,9 @@
 
   <!-- Contact form JavaScript -->
   <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/agency.min.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
